cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__context__test__context_documentation_action_set_multiple_no_schema.snap
---
source: cedar-language-server/src/documentation/context.rs
expression: context_doc.to_documentation_string(None)
---
# Context

The context element in a Cedar policy provides additional information about the
circumstances of the request being evaluated. This includes details such as the
date and time, IP address, authentication methods, or any custom data relevant
to authorization decisions.

Context attributes are passed at evaluation time and can be referenced in policy conditions.
These attributes are not persisted within Cedar but are provided with each request.

**Context for Multiple Actions**

Context attributes available for actions: `Action::"Act"`, `Action::"View"`

*Schema not available - context structure unknown*
